--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "floraforecastee966e32": {
+    "floraforecast40b6d08b": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
